@@ -4,9 +4,9 @@ import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.model.embedding.EmbeddingModel;
 import dev.langchain4j.rag.content.Content;
+import dev.langchain4j.rag.content.EmbeddingStoreContent;
 import dev.langchain4j.rag.query.Query;
 import dev.langchain4j.spi.model.embedding.EmbeddingModelFactory;
-import dev.langchain4j.store.embedding.EmbeddingMatch;
 import dev.langchain4j.store.embedding.EmbeddingSearchRequest;
 import dev.langchain4j.store.embedding.EmbeddingSearchResult;
 import dev.langchain4j.store.embedding.EmbeddingStore;
@@ -21,7 +21,6 @@ import static dev.langchain4j.internal.ValidationUtils.ensureBetween;
 import static dev.langchain4j.internal.ValidationUtils.ensureGreaterThanZero;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
 import static dev.langchain4j.spi.ServiceHelper.loadFactories;
-import static java.util.stream.Collectors.toList;
 
 /**
  * A {@link ContentRetriever} that retrieves from an {@link EmbeddingStore}.
@@ -240,9 +239,8 @@ public class EmbeddingStoreContentRetriever implements ContentRetriever {
         EmbeddingSearchResult<TextSegment> searchResult = embeddingStore.search(searchRequest);
 
         return searchResult.matches().stream()
-                .map(EmbeddingMatch::embedded)
-                .map(Content::from)
-                .collect(toList());
+                .map(embeddingMatch -> (Content)EmbeddingStoreContent.from(embeddingMatch.embedded(), embeddingMatch.score(), embeddingMatch.embeddingId()))
+                .toList();
     }
 
     @Override
